[package]
name = "csv_to_latexteble"
version = "0.1.0"
authors = ["Namacha411 <52745962+Namacha411@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
csv = "1.1"